# mkgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
mkgen/: cli.py  config.py  main.py  makefile.py  utils.py
src/: main.py
tests/: test_config.py  test_main.py  test_makefile.py  test_utils.py
tests/data/: file.R  plot.R
